# lacrei-saude-api

./: .coverage  .dockerignore  .gitignore  Dockerfile  docker-compose.yml  pyproject.toml
.github/workflows/: main.yml
appointments/: models.py  serializers.py  tests.py  urls.py  views.py
appointments/migrations/: 0001_initial.py  0002_appointment_created_at_appointment_customer_name_and_more.py  0003_alter_appointment_professional.py
core/: settings.py  urls.py
docs/: backlog.md  requirements.md
professionals/: models.py  serializers.py  tests.py  urls.py  views.py
professionals/migrations/: 0001_initial.py
users/: serializers.py  tests.py  urls.py  views.py
